# UAV

./: Cargo.toml  DotPaint.html  DotPaint.js  Grid.html  README.md  README_SIMBA_PATCH.md  ipad.html  main.rs  patch_simba.sh  rust_out  simulation.rs
aosoa/: Cargo.toml
aosoa/src/: bundle.rs  bundle_tuple.rs  lib.rs  split.rs
app/: Cargo.toml
canvas/: Cargo.toml
ci/: concourse.dhall  concourse.yml
exhibition/: README.md  setup_px4.sh
exhibition/src/: auth.rs  bridge.rs  ipad.html  server.rs  telemetry.rs
exhibition/static/: gridPaint.html  gridPaint.js  index.html  ipad.html  login.html  rasterpoint.js  responsive.js
hardware/SprayController/: SprayController.kicad_prl  SprayController.kicad_pro  SprayController.kicad_sch
link/: Cargo.toml  Mission.fbs  SurfaceReferential.xml
plot_planner/: Cargo.toml
plot_planner/proptest-regressions/vision/ops/: minmax.txt
plot_planner/src/: common.rs  device.rs  lib.rs  path.rs
plot_planner/src/generation/: common.rs  mod.rs  vec_generation_buffer.rs
plot_planner/src/generation/screening/: common.rs  consts.rs  grid.rs  iterator.rs  mod.rs
plot_planner/src/optimization/: common.rs  mod.rs
plot_planner/src/optimization/dots/: mod.rs
plot_planner/src/optimization/gryf_algo/: adjacency_matrix.rs  common.rs  mod.rs
plot_planner/src/optimization/gryf_algo/floyd_warshall/: mod.rs
plot_planner/src/optimization/gryf_algo/mst/: kruskal.rs
plot_planner/src/optimization/gryf_algo/rpp/: mod.rs  path_scanning.rs
plot_planner/src/optimization/gryf_algo/tsp/: mod.rs  nearest_neighbor.rs
plot_planner/src/optimization/gryf_algo/utils/: dsu.rs  mod.rs
plot_planner/src/optimization/lines/: mod.rs
plot_planner/src/optimization/settings/: direction_change.rs  mod.rs  specific_energy.rs
plot_planner/src/scanning/: common.rs  mod.rs  parameters.rs
plot_planner/src/sketch/: etf.rs  mod.rs
sim/: Cargo.toml  shell.nix
sim/src/: main.rs  physical_link.rs
sim/testdata/: signal-2025-12-01-170520.xcf
