[package]
name = "exhibition"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Web server
axum = { version = "0.7", features = ["ws", "multipart", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }

# MAVLink support
mavlink = { version = "0.17", features = ["std"] }

# Path planning
plot_planner = { workspace = true }
# hdp_common is re-exported from plot_planner::generation::hdp_common
image = "0.25.6"
nalgebra = "0.33.2"

# Async utilities
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Random number generation
rand = "0.9.2"
rand_xoshiro = "0.7.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64 encoding/decoding
base64 = "0.22"

# Serial communication for hardware
serialport = "4.8.1"

