[package]
name = "plot_planner"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[features]
rayon = ["image/rayon"]
# hdp feature disabled because hdp_iter dependency is not available
# hdp = ["hdp_iter"]
default = ["rayon"]

[dependencies]
gryf = "0.2.0"
image = {version = "0.25.6"}
#imageproc = "0.25.0"
nalgebra = "0.33.2"
ndarray = "0.17.2"
num-traits = "0.2.19"
rand = "0.9.2"
rand_xoshiro = "0.7.0"
rayon = "1.11.0"
simba = {workspace = true, default-features = false, features = ["portable_simd"]}
# Using nightly Rust (specified in rust-toolchain.toml) so portable_simd is available
aosoa = {workspace = true}
# hdp_iter is optional - uncomment and enable "hdp" feature if you have ../oxycv/hdp_iter
# For now, commented out because the dependency doesn't exist
# hdp_iter = {path = "../../oxycv/hdp_iter", optional = true}

[dev-dependencies]
proptest = "1.8.0"
